oapi codegen setup, pending dynamic openapi editing from db migrations and vendor extensions
