# internal/gen/models/model_role.go
@@ -1,0 +1,12 @@
+// Code generated by openapi-generator. DO NOT EDIT.
+
+package models
+
+type Role string
+
+// List of Role.
+const (
+	USER    Role = "user"
+	MANAGER Role = "manager"
+	ADMIN   Role = "admin"
+)
