# internal/gen/models/model_scope.go
@@ -1,0 +1,11 @@
+// Code generated by openapi-generator. DO NOT EDIT.
+
+package models
+
+type Scope string
+
+// List of Scope.
+const (
+	SCOPE1 Scope = "scope1"
+	SCOPE2 Scope = "scope2"
+)
